Fixed layout so it wouldn't overlap with smaller screens

--- a/style.css
+++ b/style.css
@@ -46,18 +46,18 @@ body {
 }
 
 #Profile {
-    height: 700px;
-    padding-top: 150px;
+    padding-top: 200px;
+    padding-bottom: 100px;
 }
 
 
 #Portfolio {
-    height: 700px;
+    padding-bottom: 100px;
     padding-top: 100px;
 }
 
 #Contact {
-    height: 450px;
+    padding-top: 100px;
     padding-bottom: 100px;
     margin-bottom: 0px;
 }
